--- a/animaciones.html
+++ b/animaciones.html
@@ -10,8 +10,9 @@
 <div class="contenedor">
 	<p>hi</p>
 	<ul>
-		<li>al</li>
-		<li>mundo</li>
+		<li>a la</li>
+		<li>cerveza</li>
+		<li>cerveza..</li>
 	</ul>
 </div>
 </body>
